--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,7 @@
     "description": "Salesforce coveo JS Search",
     "keywords": [
         "salesforce coveo search",
-        "coveo JS search dependencies",
+        "coveo JS search dependencies"
     ],
     "license": "MIT",
     "ignore": [
