deleting .bower.json

--- a/bower.json
+++ b/bower.json
@@ -26,5 +26,9 @@
         "test",
         "tests",
         "index.html"
-    ]
+    ],
+    "repository": {
+      "type": "url",
+      "url": "https://help.salesforce.com/resource/coveosolutions__CoveoJsSearch"
+    }
 }
